all green. upgraded to spring boot 3
