# src/test/resources/my-openapi.json
@@ -1,57 +1,51 @@
 {
-  "openapi" : "3.0.1",
-  "info" : {
-    "title" : "OpenAPI definition",
-    "version" : "v0"
+  "openapi": "3.0.1",
+  "info": {
+    "title": "OpenAPI definition",
+    "version": "v0"
   },
-  "servers" : [ {
-    "url" : "http://localhost",
-    "description" : "Generated server url"
-  } ],
-  "paths" : {
-    "/product/search" : {
-      "post" : {
-        "tags" : [ "product-api" ],
-        "operationId" : "search",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/ProductSearchCriteria"
+  "servers": [
+    {
+      "url": "http://localhost",
+      "description": "Generated server url"
+    }
+  ],
+  "paths": {
+    "/product/search": {
+      "post": {
+        "tags": [
+          "product-api"
+        ],
+        "operationId": "search",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductSearchCriteria"
               }
             }
           },
-          "required" : true
+          "required": true
         },
-        "responses" : {
-          "500" : {
-            "description" : "Internal Server Error",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+        "responses": {
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/ProductSearchResult"
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProductSearchResult"
                   }
                 }
               }
@@ -60,37 +54,29 @@
         }
       }
     },
-    "/product/export" : {
-      "post" : {
-        "tags" : [ "product-api" ],
-        "operationId" : "startExport",
-        "responses" : {
-          "500" : {
-            "description" : "Internal Server Error",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+    "/product/export": {
+      "post": {
+        "tags": [
+          "product-api"
+        ],
+        "operationId": "startExport",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
@@ -98,187 +84,180 @@
         }
       }
     },
-    "/product/create" : {
-      "post" : {
-        "tags" : [ "product-api" ],
-        "operationId" : "create",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/ProductDto"
+    "/product/create": {
+      "post": {
+        "tags": [
+          "product-api"
+        ],
+        "operationId": "create",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductDto"
               }
             }
           },
-          "required" : true
+          "required": true
         },
-        "responses" : {
-          "500" : {
-            "description" : "Internal Server Error",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+        "responses": {
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK"
+          "200": {
+            "description": "OK"
           }
         }
       }
     },
-    "/product/{id}" : {
-      "get" : {
-        "tags" : [ "product-api" ],
-        "operationId" : "get",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "integer",
-            "format" : "int64"
+    "/product/{id}": {
+      "get": {
+        "tags": [
+          "product-api"
+        ],
+        "operationId": "get",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
-        } ],
-        "responses" : {
-          "500" : {
-            "description" : "Internal Server Error",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProductDto"
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductDto"
                 }
               }
             }
           }
         }
       },
-      "delete" : {
-        "tags" : [ "product-api" ],
-        "operationId" : "delete",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "integer",
-            "format" : "int64"
+      "delete": {
+        "tags": [
+          "product-api"
+        ],
+        "operationId": "delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
-        } ],
-        "responses" : {
-          "500" : {
-            "description" : "Internal Server Error",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
           },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK"
+          "200": {
+            "description": "OK"
           }
         }
       }
     }
   },
-  "components" : {
-    "schemas" : {
-      "ProductSearchCriteria" : {
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
+  "components": {
+    "schemas": {
+      "ProductSearchCriteria": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
           },
-          "category" : {
-            "type" : "string",
-            "enum" : [ "ELECTRONICS", "KIDS", "HOME", "UNCATEGORIZED" ]
+          "category": {
+            "type": "string",
+            "enum": [
+              "ELECTRONICS",
+              "KIDS",
+              "HOME",
+              "UNCATEGORIZED"
+            ]
           },
-          "supplierId" : {
-            "type" : "integer",
-            "format" : "int64"
+          "supplierId": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
-      "ProductSearchResult" : {
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int64"
+      "ProductSearchResult": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
           },
-          "name" : {
-            "type" : "string"
+          "name": {
+            "type": "string"
           }
         }
       },
-      "ProductDto" : {
-        "required" : [ "barcode", "name" ],
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int64"
+      "ProductDto": {
+        "required": [
+          "barcode",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
           },
-          "name" : {
-            "type" : "string"
+          "name": {
+            "type": "string"
           },
-          "barcode" : {
-            "type" : "string"
+          "barcode": {
+            "type": "string"
           },
-          "supplierCode" : {
-            "type" : "string"
+          "supplierCode": {
+            "type": "string"
           },
-          "category" : {
-            "type" : "string",
-            "enum" : [ "ELECTRONICS", "KIDS", "HOME", "UNCATEGORIZED" ]
+          "category": {
+            "type": "string",
+            "enum": [
+              "ELECTRONICS",
+              "KIDS",
+              "HOME",
+              "UNCATEGORIZED"
+            ]
           },
-          "createdDate" : {
-            "type" : "string",
-            "format" : "date"
+          "createdDate": {
+            "type": "string",
+            "format": "date"
           }
         }
       }
